@@ -1,3 +1,9 @@
+2006-03-17  Jacob Ilsø Christensen <jacobilsoe@gmail.com>
+
+	* Parser/Parser.cs:
+	* Parser/Resolver.cs:
+	Removed unused MonodocResolver.
+
 2006-03-16  Jacob Ilsø Christensen  <jacobilsoe@gmail.com>
 
 	* Parser/LanguageItemVisitor.cs: Make sure that composite
